<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/cardview_padding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height">

            <ImageView
                android:id="@+id/imgGezegenLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView

                android:id="@+id/txtGezegenAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_right"
                android:textColor="@color/gunesAdiColor"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/gezegengunse" />

            <TextView

                android:id="@+id/txtGezegenGunUzunlugu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_right"
                android:layout_marginEnd="@dimen/margin_right"
                android:textColor="@color/gunesAdiColor"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGezegenAdi"
                tools:text="@string/gunesgunuzunlugu" />

            <TextView

                android:id="@+id/txtGezegenCapi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_right"
                android:textColor="@color/gunesAdiColor"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGezegenGunUzunlugu"
                tools:text="@string/gunesgunucapi" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_left"
                android:text="@string/gezegen_adiBilgi"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@+id/imgGezegenLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_left"
                android:text="@string/gezegen_gunuzunluguBilgi"
                app:layout_constraintStart_toEndOf="@+id/imgGezegenLogo"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_left"
                android:text="@string/gezegen_capi_bilgi"
                app:layout_constraintStart_toEndOf="@+id/imgGezegenLogo"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>